--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                 <li>Работы</li>
                 <li>Контакты</li>
             </ol>
+            <button>Нажми на меня</button>
+            <div id='add-info'></div>
             <a href="https://ossified-package-909.notion.site/6df2b34e6c04474aa28c9b23e0cb3e33">Моя домашка</a>
             <h1>Привет, меня зовут Рома</h1>
             <p class="f1">Мне 10 лет , Я уже закончил
@@ -41,7 +43,7 @@
                 можно создать.</p>
         </div>
     </div>
-
+    <script src='script.js'></script>
 </body>
 
 </html>
