--- a/index.html
+++ b/index.html
@@ -10,64 +10,86 @@
 
 <body>
     <div class="wrapper">
-        <div class="container">
-            <ol>
-                <li>Главная</li>
-                <li>О себе</li>
-                <li>Навыки</li>
-                <li>Резюме сделать</li>
-                <li>Работы сделать</li>
-                <li>Контакты сделать</li>
-            </ol>
-        </div>
 
-        <section class="first-screen">
+        <header class="header">
             <div class="container">
-                <h1 class="first-screen__title">Привет, меня зовут Рома</h1>
-                <p class="first-screen__text">Мне 10 лет , Я уже закончил
-                    4 класс и это мой первый сайт! </p>
+                <ol class="header-menu">
+                    <li class="header-menu__yellow">Главная</li>
+                    <li>О себе</li>
+                    <li>Навыки</li>
+                    <li>Резюме</li>
+                    <li>Работы</li>
+                    <li>Контакты</li>
+                </ol>
             </div>
-        </section>
+        </header>
 
-        <section class="test">
-            <div class="container">
-                <h2 class="about__title">О себе</h2>
-                <p class="about__text">
-                    Я создавал этот сайт вместе со своим учителем Виктором.
-                    Я и раньше учился программировать. Например
-                    сначала Я программировал черепашку в майнкрафте
-                    на версии Forge 1.7.10. Потом Я освоил модуль
-                    Scratch 3. Я даже сделал свою игру с названием
-                    "Уплыви от акулы". А дальше Я учился программировать
-                    в Stancyl. В Stancyl мы создавали пиксильные
-                    игры такие как Марио. Теперь же я создаю
-                    веб-сайты вместе с Виктором</p>
-            </div>
-        </section>
+        <main class="main">
+            <section class="first-screen">
+                <div class="container">
+                    <div class="first-screen__wrap">
 
-        <section class="skills">
-            <div class="container">
-                <h2 class="skills__title">Навыки</h2>
-                <p class="skills__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, id.</p>
-            </div>
-        </section>
+                        <div>
+                            <h1 class="first-screen__title">Привет, меня зовут Рома</h1>
 
-        <section class="resume">
-            <div class="container">
-                <li>Резюме</li>
-                <a href="https://ossified-package-909.notion.site/6df2b34e6c04474aa28c9b23e0cb3e33">Моя домашка</a>
-            </div>
-        </section>
+                            <p class="first-screen__text">Мне 10 лет , Я уже закончил
+                                4 класс и это мой первый сайт! </p>
+
+                        </div>
+
+                        <div class="first-screen__image">
+                            <img src="IMG_7886.JPG" alt="">
+                        </div>
 
 
-        <img src="IMG_7886.JPG" alt=""> <img src="IMG_7895.JPG">
-        <li>Программирование</li>
-        <p class="f2">Программирование-это процесс создания программ.
-            Программа приводит в действие что либо. Например
-            приложение или сайт. А ещё программирование это
-            творчество. Только задумайтесь сколько всего
-            можно создать.
-        </p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="test">
+                <div class="container">
+                    <h2 class="about__title">О себе</h2>
+                    <p class="about__text">
+                        Я создавал этот сайт вместе со своим учителем Виктором.
+                        Я и раньше учился программировать. Например
+                        сначала Я программировал черепашку в майнкрафте
+                        на версии Forge 1.7.10. Потом Я освоил модуль
+                        Scratch 3. Я даже сделал свою игру с названием
+                        "Уплыви от акулы". А дальше Я учился программировать
+                        в Stancyl. В Stancyl мы создавали пиксильные
+                        игры такие как Марио. Теперь же я создаю
+                        веб-сайты вместе с Виктором</p>
+                </div>
+            </section>
+
+            <section class="skills">
+                <div class="container">
+                    <h2 class="skills__title">Навыки</h2>
+                    <p class="skills__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, id.</p>
+                </div>
+            </section>
+
+            <section class="resume">
+                <div class="container">
+                    <li>Резюме</li>
+                    <a href="https://ossified-package-909.notion.site/6df2b34e6c04474aa28c9b23e0cb3e33">Моя домашка</a>
+                </div>
+            </section>
+
+            <img class="img2" src="IMG_7895.JPG">
+
+            <li>Программирование</li>
+            <p class="f2">Программирование-это процесс создания программ.
+                Программа приводит в действие что либо. Например
+                приложение или сайт. А ещё программирование это
+                творчество. Только задумайтесь сколько всего
+                можно создать.
+            </p>
+        </main>
+
+        <footer class="footer">
+            FOOTER
+        </footer>
     </div>
     <!--  -->
     <section class="workout">
