--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Мой сайт!</title>
 </head>
@@ -14,12 +19,12 @@
         <header class="header">
             <div class="container">
                 <ol class="header-menu">
-                    <li class="header-menu__yellow">Главная</li>
-                    <li>О себе</li>
-                    <li>Навыки</li>
-                    <li>Резюме</li>
-                    <li>Работы</li>
-                    <li>Контакты</li>
+                    <li class="header-menu__link">Главная</li>
+                    <li class="header-menu__link">О себе</li>
+                    <li class="header-menu__link">Навыки</li>
+                    <li class="header-menu__link">Резюме</li>
+                    <li class="header-menu__link">Работы</li>
+                    <li class="header-menu__link">Контакты</li>
                 </ol>
             </div>
         </header>
@@ -29,16 +34,14 @@
                 <div class="container">
                     <div class="first-screen__wrap">
 
-                        <div>
-                            <h1 class="first-screen__title">Привет, меня зовут Рома</h1>
-
-                            <p class="first-screen__text">Мне 10 лет , Я уже закончил
-                                4 класс и это мой первый сайт! </p>
-
+                        <div class="first-screen__info">
+                            <p>Привет всем!</p>
+                            <h1>Меня зовут Рома</h1>
+                            <h2>Я фронт-енд разработчик</h2>
                         </div>
 
                         <div class="first-screen__image">
-                            <img src="IMG_7886.JPG" alt="">
+                            <img src="images/IMG_7886.JPG" alt="">
                         </div>
 
 
@@ -50,6 +53,8 @@
                 <div class="container">
                     <h2 class="about__title">О себе</h2>
                     <p class="about__text">
+                        Мне 10 лет , Я уже закончил
+                        4 класс и это мой первый сайт!
                         Я создавал этот сайт вместе со своим учителем Виктором.
                         Я и раньше учился программировать. Например
                         сначала Я программировал черепашку в майнкрафте
@@ -76,7 +81,7 @@
                 </div>
             </section>
 
-            <img class="img2" src="IMG_7895.JPG">
+            <img class="img2" src="images/IMG_7895.JPG">
 
             <li>Программирование</li>
             <p class="f2">Программирование-это процесс создания программ.
