add titles styles

--- a/index.html
+++ b/index.html
@@ -49,9 +49,15 @@
                 </div>
             </section>
 
-            <section class="test">
+            <section class="about">
                 <div class="container">
-                    <h2 class="about__title">О себе</h2>
+
+
+                    <h2 class="about__title title">
+                        О себе
+                        <div class="title__decor"></div>
+                    </h2>
+
                     <p class="about__text">
                         Мне 10 лет , Я уже закончил
                         4 класс и это мой первый сайт!
@@ -69,27 +75,40 @@
 
             <section class="skills">
                 <div class="container">
-                    <h2 class="skills__title">Навыки</h2>
+                    <h2 class="skills__title title">
+                        Навыки
+                    <div class="title__decor"></div>
+                    </h2>
                     <p class="skills__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, id.</p>
                 </div>
             </section>
 
             <section class="resume">
                 <div class="container">
-                    <li>Резюме</li>
-                    <a href="https://ossified-package-909.notion.site/6df2b34e6c04474aa28c9b23e0cb3e33">Моя домашка</a>
+                    <h2 class="resume__title title">
+                        Резюме
+                        <div class="title__decor"></div>
+                    </h2>
+                </div>
+            </section>
+            <section class="works">
+                <div class="container">
+                    <h2 class="works__title title" >
+                        Работы
+                        <div class="title__decor"></div>
+                    </h2>
+                </div>
+            </section>
+            <section class="contact">
+                <div class="container">
+                <h2 class="contact__title title">
+                    Контакты
+                    <div class="title__decor"></div>
+                </h2>
                 </div>
             </section>
 
-            <img class="img2" src="images/IMG_7895.JPG">
-
-            <li>Программирование</li>
-            <p class="f2">Программирование-это процесс создания программ.
-                Программа приводит в действие что либо. Например
-                приложение или сайт. А ещё программирование это
-                творчество. Только задумайтесь сколько всего
-                можно создать.
-            </p>
+           
         </main>
 
         <footer class="footer">
@@ -107,6 +126,16 @@
             sapiente nobis voluptates recusandae autem officia rem! Unde blanditiis tempora id nisi non suscipit ullam
             vel perferendis debitis ratione tempore, at iusto recusandae libero consequuntur!</p>
     </section>
+
+    <img class="img2" src="images/IMG_7895.JPG">
+    
+    <li>Программирование</li>
+    <p class="f2">Программирование-это процесс создания программ.
+        Программа приводит в действие что либо. Например
+        приложение или сайт. А ещё программирование это
+        творчество. Только задумайтесь сколько всего
+        можно создать.
+    </p>
     <script src='script.js'></script>
 </body>
 
