--- a/index.html
+++ b/index.html
@@ -112,30 +112,10 @@
         </main>
 
         <footer class="footer">
-            FOOTER
+            <h2>FOOTER</h2>
+            <a href="test.html">Page #2</a>
         </footer>
     </div>
-    <!--  -->
-    <section class="workout">
-        <h2>Workout</h2>
-        <div class="container">
-            <button>Нажми на меня</button>
-            <div id='add-info'></div>
-        </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius architecto reiciendis eos hic impedit, dolores
-            sapiente nobis voluptates recusandae autem officia rem! Unde blanditiis tempora id nisi non suscipit ullam
-            vel perferendis debitis ratione tempore, at iusto recusandae libero consequuntur!</p>
-    </section>
-
-    <img class="img2" src="images/IMG_7895.JPG">
-    
-    <li>Программирование</li>
-    <p class="f2">Программирование-это процесс создания программ.
-        Программа приводит в действие что либо. Например
-        приложение или сайт. А ещё программирование это
-        творчество. Только задумайтесь сколько всего
-        можно создать.
-    </p>
     <script src='script.js'></script>
 </body>
 
