--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                         "Уплыви от акулы". А дальше Я учился программировать
                         в Stancyl. В Stancyl мы создавали пиксильные
                         игры такие как Марио. Теперь же я создаю
-                        веб-сайты вместе с Виктором</p>
+                        веб-сайты вместе с Виктором
+                    </p>
                 </div>
             </section>
 
