--- a/index.html
+++ b/index.html
@@ -97,6 +97,17 @@
                         Работы
                         <div class="title__decor"></div>
                     </h2>
+                    <div class="works-body">
+                        <div class="works-items">
+                            <h3 class="works-item__title">Убежать от динозавра</h3>
+                            <div class="works-items__image">
+                                <img src="img" alt="">
+                            </div>
+                            <div class="works-items__info">
+                                <a href="gamedino.html" target="_blank">Сыграть</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
             <section class="contact">
@@ -105,6 +116,7 @@
                     Контакты
                     <div class="title__decor"></div>
                 </h2>
+              
                 </div>
             </section>
 
@@ -113,7 +125,7 @@
 
         <footer class="footer">
             <h2>FOOTER</h2>
-            <a href="test.html">Page #2</a>
+            <a href="test.html" target="_blank">Page #2</a>
         </footer>
     </div>
     <script src='script.js'></script>
