add games blocks

--- a/index.html
+++ b/index.html
@@ -101,7 +101,52 @@
                         <div class="works-items">
                             <h3 class="works-item__title">Убежать от динозавра</h3>
                             <div class="works-items__image">
-                                <img src="img" alt="">
+                                <img src="images/games/dino.png" alt="">
+                            </div>
+                            <div class="works-items__info">
+                                <a href="gamedino.html" target="_blank">Сыграть</a>
+                            </div>
+                        </div>
+                        <div class="works-items">
+                            <h3 class="works-item__title">Убежать от динозавра</h3>
+                            <div class="works-items__image">
+                                <img src="images/games/dino.png" alt="">
+                            </div>
+                            <div class="works-items__info">
+                                <a href="gamedino.html" target="_blank">Сыграть</a>
+                            </div>
+                        </div>
+                        <div class="works-items">
+                            <h3 class="works-item__title">Убежать от динозавра</h3>
+                            <div class="works-items__image">
+                                <img src="images/games/dino.png" alt="">
+                            </div>
+                            <div class="works-items__info">
+                                <a href="gamedino.html" target="_blank">Сыграть</a>
+                            </div>
+                        </div>
+                        <div class="works-items">
+                            <h3 class="works-item__title">Убежать от динозавра</h3>
+                            <div class="works-items__image">
+                                <img src="images/games/dino.png" alt="">
+                            </div>
+                            <div class="works-items__info">
+                                <a href="gamedino.html" target="_blank">Сыграть</a>
+                            </div>
+                        </div>
+                        <div class="works-items">
+                            <h3 class="works-item__title">Убежать от динозавра</h3>
+                            <div class="works-items__image">
+                                <img src="images/games/dino.png" alt="">
+                            </div>
+                            <div class="works-items__info">
+                                <a href="gamedino.html" target="_blank">Сыграть</a>
+                            </div>
+                        </div>
+                        <div class="works-items">
+                            <h3 class="works-item__title">Убежать от динозавра</h3>
+                            <div class="works-items__image">
+                                <img src="images/games/dino.png" alt="">
                             </div>
                             <div class="works-items__info">
                                 <a href="gamedino.html" target="_blank">Сыграть</a>
