add title for images

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                             </div>
                         </div>
                         <div class="works-items">
-                            <h3 class="works-item__title">Убежать от динозавра</h3>
+                            <h3 class="works-item__title">Змейка</h3>
                             <div class="works-items__image">
-                                <img src="images/games/dino.png" alt="">
+                                <img src="images/games/.png" alt="">
                             </div>
                             <div class="works-items__info">
                                 <a href="gamedino.html" target="_blank">Сыграть</a>
@@ -119,7 +119,7 @@
                         <div class="works-items">
                             <h3 class="works-item__title">Убежать от динозавра</h3>
                             <div class="works-items__image">
-                                <img src="images/games/dino.png" alt="">
+                                <img src="images/games/.png" alt="">
                             </div>
                             <div class="works-items__info">
                                 <a href="gamedino.html" target="_blank">Сыграть</a>
