--- a/index.html
+++ b/index.html
@@ -110,43 +110,43 @@
                         <div class="works-items">
                             <h3 class="works-item__title">Змейка</h3>
                             <div class="works-items__image">
-                                <img src="images/games/.png" alt="">
+                                <img src="images/games/snake.png" alt="">
                             </div>
                             <div class="works-items__info">
                                 <a href="gamedino.html" target="_blank">Сыграть</a>
                             </div>
                         </div>
                         <div class="works-items">
-                            <h3 class="works-item__title">Убежать от динозавра</h3>
+                            <h3 class="works-item__title">Уплыви от акулы</h3>
                             <div class="works-items__image">
-                                <img src="images/games/.png" alt="">
+                                <img src="images/games/fish.png" alt="">
                             </div>
                             <div class="works-items__info">
                                 <a href="gamedino.html" target="_blank">Сыграть</a>
                             </div>
                         </div>
                         <div class="works-items">
-                            <h3 class="works-item__title">Убежать от динозавра</h3>
+                            <h3 class="works-item__title">Крабик</h3>
                             <div class="works-items__image">
-                                <img src="images/games/dino.png" alt="">
+                                <img src="images/games/krab.png" alt="">
                             </div>
                             <div class="works-items__info">
                                 <a href="gamedino.html" target="_blank">Сыграть</a>
                             </div>
                         </div>
                         <div class="works-items">
-                            <h3 class="works-item__title">Убежать от динозавра</h3>
+                            <h3 class="works-item__title">Угадай число</h3>
                             <div class="works-items__image">
-                                <img src="images/games/dino.png" alt="">
+                                <img src="images/games/number.png" alt="">
                             </div>
                             <div class="works-items__info">
                                 <a href="gamedino.html" target="_blank">Сыграть</a>
                             </div>
                         </div>
                         <div class="works-items">
-                            <h3 class="works-item__title">Убежать от динозавра</h3>
+                            <h3 class="works-item__title">Платформер</h3>
                             <div class="works-items__image">
-                                <img src="images/games/dino.png" alt="">
+                                <img src="images/games/giga.png" alt="">
                             </div>
                             <div class="works-items__info">
                                 <a href="gamedino.html" target="_blank">Сыграть</a>
