--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             </div>
                             <div class="works-items__info">
 
-                                <a class="works-items__link" href="gamedino.html" target="_blank">Сыграть</a>
+                                <a class="works-items__link" href="fish.html" target="_blank">Сыграть</a>
                            
                             </div>
                         </div>
@@ -149,7 +149,7 @@
                             </div>
                             <div class="works-items__info">
 
-                                <a class="works-items__link" href="gamedino.html" target="_blank">Сыграть</a>
+                                <a class="works-items__link" href="number.html" target="_blank">Сыграть</a>
                             
                             </div>
                         </div>
